# dalmation

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  nav.rs  style.css  theme.rs
src/fs/: directory_sorter.rs  mod.rs
src/thumbnail/: mod.rs
src/ui/: commands.rs  file_grid.rs  file_tree.rs  info_dialog.rs  mod.rs  path_bar.rs  window.rs
